# terminulator

./: CMakeLists.txt  LICENSE  README.md  TODO.md  build.sh
inc/: main.h  window.h
src/: main.c  window.c
